# BioScience-Engine

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
bioscience_engine/core/cpp/: CMakeLists.txt
